# daily-vcs

./: .gitignore  .gitmodules  LICENSE  README.md  package.json
compositions/: dev-bf
compositions/daily-baseline/: .eslintrc.json  constants.js  index.jsx  layouts.js  params.js  participants.js  preferred-video-ids.js  preloads.js
compositions/daily-baseline/components/: Banner.js  CustomOverlay.js  CustomOverlay_bounce.js  EmojiReactions.js  HighlightRowText.js  ImageOverlay.js  LowerThird.js  MicStatusIndicator.js  ParticipantLabelPipStyle.js  PausedPlaceholder.js  RoomDebug.js  Sidebar.js  Slate.js  TextOverlay.js  Toast.js  VideoDominant.js  VideoGrid.js  VideoPip.js  VideoSingle.js  VideoSplit.js  WebFrameOverlay.js  useFade.js
compositions/daily-baseline/components/overrides/: decorateVideoDominantItem.js  decorateVideoGridItem.js  decorateVideoPipItem.js  decorateVideoSingleItem.js  decorateVideoSplitItem.js
compositions/daily-baseline/images/: mic_muted_white_32.png.json  overlay.png.json
compositions/daily-roomdebug/: MediaInputPrintout.js  RoomPrintout.js  constants.js  index.jsx  layouts.js
compositions/daily-rundown/: index.jsx  layouts.js  params.js  preloads.js
compositions/daily-rundown/components/: HostGuestVideo.js  LogoSidebar.js  ParticipantLabel.js  PollResult.js  RundownSidebar.js  VideoContainer.js
compositions/daily-rundown/images/: header.png.json  logo.png.json
cut-transcript-tools/: .eslintignore  README.md  gen-cut-from-raw-tracks.js  gen-cut-from-single-video-text-extracts.js  gen-transcript.js  package-lock.json  package.json  prepare-raw-tracks-for-cut.zx.mjs  vcscut-render.zx.mjs
cut-transcript-tools/gui/: transcript-extract.html
cut-transcript-tools/visual-template-plugins/: social-interview.js
js/: .gitignore  ANIMATIONS.md  LAYOUT_ANIMATIONS.md  README.md  comp-namespace-util.js  daily-vcs-main.js  package-lock.json  package.json  swc.config.json  tsconfig.json  vcs-batch-runner.js  vcs-test-runner.js  vite-plugin-vcs-comp.js  vite.config.js  webpack.config.js
js/devrig/: browser-polyfills.js  devrig-entry.js  vcs-proto-rig.html  vcs-rig.html
js/example/: graphics-test.jsx  hello.jsx  stretchbox.jsx
js/example/batch/: baseline1.json
js/example/webvtt/: transcript1.vtt
js/lib-browser/: font-loader.js  vcs-browser.js  vcs-browser.webpack.config.js
js/lib-node/: batch-util.js  font-loader.js  jsx-builder.js  log.js
js/src/: .eslintrc.json  comp-backing-model.js  index.js  loader-base.js  react-reconciler.js
js/src/animation/: animator.js  animator.test.js  bezier-easing.js  index.js  predicates.js  predicates.test.js
js/src/react-api/component/: Box.js  Image.js  Video.js
js/src/react-api/context/: index.js
js/src/react-api/hook/: index.js  time.js
js/src/react/components/: Box.js  Emoji.js  Image.js  Label.js  Text.js  Video.js  WebFrame.js  index.js
js/src/react/contexts/: CompositionDataContext.js  ExternalDataContext.js  MediaInputContext.js  RoomContext.js  TimeContext.js  VideoCallContext.js  index.js
js/src/react/hooks/: compositionData.js  externalData.js  index.js  mediaInput.js  room.js  time.js  videoCall.js
js/src/render/: canvas-display-list.js  canvas-utils.js  canvas.js  video-dom.js  video-scenedesc.js
js/src/stdlib/components/: index.js
js/src/stdlib/layouts/: grid.js  index.js  split.js  (+1 more)
js/src/text/: attributed-string.js  emoji.js  font-setup.js  font.js  standard-fonts.js  text-layout.js
res/test-assets/: daily-logo-primary-darkground.png.json  daily-logo-small-lightground.png.json  landscape-j3CjZYckM88-unsplash.json  raised-hand_270b.png.json  test_square_320px.png.json  user_white_64.png.json
server-render/canvex/: .gitignore  init_build_linux.sh  meson.build  meson_linux.ini
server-render/canvex/example-data/: background-clip.json  basic-labels.json  basic-lowerthird.json  graphics-test-random-50.json  rounded-sidebar.json  rundown.json
server-render/canvex/include/: canvex_c_api.h
server-render/canvex/src/: canvas_display_list.cpp  canvas_display_list.h  canvex_c_api.cpp  canvex_demo_main.cpp  canvex_render_frame_main.c  canvex_skia_context.cpp  canvex_skia_context.h  canvex_skia_executor.cpp  canvex_skia_executor.h  canvex_skia_resource_context.cpp  canvex_skia_resource_context.h  canvex_standalone_main.cpp  lib.rs  main.rs  meson.build  skia_includes.h  style_util.cpp  style_util.h
server-render/canvex/test/: meson.build  test_runner_main.c
server-render/test/: README-TEMPLATE.md  SCENARIO_TESTS.md  canvex-render-frame-util.js  run_all_tests.sh  run_clean_and_copy_to_repo.sh  run_scenario.sh  run_vcsrender_base_test.sh
server-render/vcscut/: .eslintignore  .eslintrc.json  .gitignore  README.md  cut.js  ffexec.js  ffinput.js  ffmetadata.js  ffoutput.js  package.json  timeutil.js
server-render/vcscut/example-data/: wasteland_ponies_reel.vcscut.json
server-render/vcsrender/: .gitignore  Cargo.toml  README.md  build.rs  convert_movie_to_yuvseq.sh  convert_png_to_yuv.sh  convert_yuv_to_png.sh  convert_yuvseq_to_movie.sh  meson.build
server-render/vcsrender/cxx_argp/: cxx_argp_application.h  cxx_argp_parser.h
server-render/vcsrender/example-data/: pauli_webcam_example_720.m4v  testpattern_956x602.yuv  vl_16inputs_720.json
server-render/vcsrender/example-data/batchtest1/: batchtest1_fg_000000.json  batchtest1_fg_000030.json  batchtest1_fg_000080.json  batchtest1_vl_000000.json  batchtest1_vl_000050.json  batchtest1_vl_000080.json
server-render/vcsrender/include/: vcsrender_c_api.h
server-render/vcsrender/src/: demo_main.cpp  file_util.cpp  file_util.h  fileseq_util.cpp  fileseq_util.h  imageseq.cpp  imageseq.h  inputloader.cpp  inputloader.h  inputtimings.h  lib.rs  mask.cpp  mask.h  meson.build  scenedesc.cpp  scenedesc.h  sceneseq.cpp  sceneseq.h  thumbs.cpp  thumbs.h  time_util.h  vcsrender_c_api.cpp  vcsrender_main.cpp  yuv_compositor.cpp  yuv_compositor.h  yuvbuf.h
server-render/vcsrender/src/parse/: parse_inputtimings.cpp  parse_inputtimings.h  parse_scenedesc.cpp  parse_scenedesc.h
server-render/vcsrender/subprojects/: canvex
(+69 files in other folders)
