vcsrender_base_sources = files(
  'scenedesc.cpp',
  'yuv_compositor.cpp',
  'file_util.cpp',
  'fileseq_util.cpp',
)

vcsrender_demo_sources = files(
  'demo_main.cpp',
) + vcsrender_base_sources

vcsrender_cli_sources = files(
  'vcsrender_main.cpp',
  'imageseq.cpp',
  'sceneseq.cpp',
) + vcsrender_base_sources
