vcsrender_base_sources = files(
  'parse/parse_scenedesc.cpp',
  'yuv_compositor.cpp',
  'file_util.cpp',
  'fileseq_util.cpp',
  'mask.cpp',
  'vcsrender_c_api.cpp',
  'thumbs.cpp',
)

vcsrender_demo_sources = files(
  'demo_main.cpp',
) + vcsrender_base_sources

vcsrender_cli_sources = files(
  'parse/parse_inputtimings.cpp',
  'vcsrender_main.cpp',
  'imageseq.cpp',
  'sceneseq.cpp',
  'inputloader.cpp',
) + vcsrender_base_sources
